# hotwater

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
src/hotwater/back/: dataconfig.json  levels.py
src/hotwater/data/: README.md  __init__.py  dataconfig.json  dataloader.py  helpers.py
src/hotwater/factors/: __init__.py  extremums.py  fdi.py  r_trend_exhaustion.py  smoothing.py
src/hotwater/interface/: __init__.py  main.py  probability.py
src/hotwater/interface/levels_alerts_gui/: dataconfig.json  gui.py  helpers.py  levels.py
